// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`largeu 1`] = `
.c0 {
  color: #c3c3c3;
  border: none;
  background: transparent;
  cursor: pointer;
  -webkit-transition: color .2s ease-in;
  transition: color .2s ease-in;
  font-size: 3em;
  padding: 0 .3em;
}

.c0:hover {
  color: #35414D;
  -webkit-transition: color .2s ease-out;
  transition: color .2s ease-out;
}

<DeleteButton
  size="large"
>
  <DeleteButton__StyledDeleteButton
    size="large"
  >
    <button
      className="c0"
      size="large"
    >
      ×
    </button>
  </DeleteButton__StyledDeleteButton>
</DeleteButton>
`;

exports[`medium 1`] = `
.c0 {
  color: #c3c3c3;
  border: none;
  background: transparent;
  cursor: pointer;
  -webkit-transition: color .2s ease-in;
  transition: color .2s ease-in;
  font-size: 2em;
  padding: 0 .3em;
}

.c0:hover {
  color: #35414D;
  -webkit-transition: color .2s ease-out;
  transition: color .2s ease-out;
}

<DeleteButton
  size="medium"
>
  <DeleteButton__StyledDeleteButton
    size="medium"
  >
    <button
      className="c0"
      size="medium"
    >
      ×
    </button>
  </DeleteButton__StyledDeleteButton>
</DeleteButton>
`;

exports[`small 1`] = `
.c0 {
  color: #c3c3c3;
  border: none;
  background: transparent;
  cursor: pointer;
  -webkit-transition: color .2s ease-in;
  transition: color .2s ease-in;
  font-size: 1.25em;
  padding: 0 auto;
}

.c0:hover {
  color: #35414D;
  -webkit-transition: color .2s ease-out;
  transition: color .2s ease-out;
}

<DeleteButton
  size="small"
>
  <DeleteButton__StyledDeleteButton
    size="small"
  >
    <button
      className="c0"
      size="small"
    >
      ×
    </button>
  </DeleteButton__StyledDeleteButton>
</DeleteButton>
`;
